[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "lead-md"
version = "1.0.2"
description = "simple markdown renderer, powered by producesyntaxed"
authors = ["Peter Rimmer"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
producesyntaxed = "^1.2.0"
